--- a/src/datasources/mongodb.datasource.config.json
+++ b/src/datasources/mongodb.datasource.config.json
@@ -1,7 +1,7 @@
 {
     "name": "mongodb",
     "connector": "mongodb",
-    "url": "mongodb+srv://pupuseriaPatty:ZYeO8XalQOV7HK6L@cluster0-pfvwk.mongodb.net:27017/pupuseriaPatty?retryWrites=true&w=majority",
+    "url": "mongodb+srv://pupuseriaPatty:ZYeO8XalQOV7HK6L@cluster0-pfvwk.mongodb.net/pupuseriaPatty?retryWrites=true&w=majority",
     "host": "cluster0-pfvwk.mongodb.net",
     "port": 27017,
     "user": "pupuseriaPatty",
