--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pupuseriapattypackend",
+    "name": "pupuseriapattybackend",
     "version": "1.0.0",
     "description": "NodeJS",
     "keywords": [
@@ -28,7 +28,6 @@
         "docker:build": "docker build -t resbar-apirest-2020 .",
         "docker:run": "docker run -p 3000:3000 -d resbar-apirest-2020",
         "migrate": "node ./dist/migrate",
-        "prestart": "npm run build",
         "start": "node -r source-map-support/register .",
         "prepublishOnly": "npm run test"
     },
