--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
 applications:
-  - name: pupuseriapattybackend
+  - name: lastiasfoodbackend
     random-route: true
-    memory: 256M
+    memory: 128M
