--- a/src/datasources/mongodb.datasource.config.json
+++ b/src/datasources/mongodb.datasource.config.json
@@ -1,12 +1,10 @@
 {
     "name": "mongodb",
     "connector": "mongodb",
-    "url": "mongodb+srv://pupuseriaPatty:ZYeO8XalQOV7HK6L@cluster0-pfvwk.mongodb.net/pupuseriaPatty?retryWrites=true&w=majority",
+    "url": "mongodb+srv://lastiasfood:hWGKkAuKQu2irAdG@cluster0-pfvwk.mongodb.net/lastiasfood?retryWrites=true&w=majority",
     "host": "cluster0-pfvwk.mongodb.net",
     "port": 27017,
-    "user": "pupuseriaPatty",
-    "password": "ZYeO8XalQOV7HK6L",
-    "database": "pupuseriaPatty",
-    "useUnifiedTopology": true,
-    "useNewUrlParser": true
+    "user": "lastiasfood",
+    "password": "hWGKkAuKQu2irAdG",
+    "database": "lastiasfood"
 }
