--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "lastiasfoodbackend",
+    "name": "pupuseriapattybackend",
     "version": "1.0.0",
     "description": "NodeJS",
     "keywords": [
